--- a/blueprints/default.yaml
+++ b/blueprints/default.yaml
@@ -172,7 +172,7 @@ form:
                        type: array
                        label: 'Follow links'
                        placeholder_key: 'fa-github'
-                       placeholder_value: 'https://github.com/michielStaes'
+                       placeholder_value: 'https://github.com/michielStaes/grav-theme-phantom'
                        required: false
 
 
@@ -181,7 +181,7 @@ form:
                         type: toggle
                         label: Contact form
                         highlight: 1
-                        default: 1
+                        default: 0
                         options:
                           0: PLUGIN_ADMIN.DISABLED
                           1: PLUGIN_ADMIN.ENABLED
